pkg/provider/kubernetes/ingress-nginx/fixtures/ingresses/ingress-with-proxy-next-upstream-status-only.yml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ingress-with-proxy-next-upstream-status-only
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/proxy-next-upstream: "http_502 http_503"

spec:
  ingressClassName: nginx
  rules:
    - host: whoami.localhost
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: whoami
                port:
                  number: 80
